--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ListMyShop</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <h1>🛒 Mi lista de la compra</h1>
@@ -13,6 +13,11 @@
     <input type="text" id="producto" placeholder="Añadir producto..." required />
     <button type="submit">Añadir</button>
   </form>
+
+  <div class="acciones-globales">
+    <button id="marcar-todos">✅ Marcar todos como comprados</button>
+    <button id="borrar-comprados">🗑️ Eliminar todos los comprados</button>
+  </div>
 
   <h2>📝 Productos pendientes</h2>
   <ul id="lista"></ul>
