add firebase config

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,12 @@
     </div>
     <ul id="comprados"></ul>
   </div>
-
-  <script src="script.js"></script>
-</body>
+<!-- Firebase CDN -->
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+<!-- Tu config -->
+<script src="firebase-config.js"></script>
+<!-- Tu lógica -->
+<script src="script.js"></script>
+ </body>
 </html>
